--- a/en/b/break.6806.wikitext
+++ b/en/b/break.6806.wikitext
@@ -175,6 +175,7 @@ The sense relating to a spell of weather is most likely to be used after a perio
 * French: [[se rompre]], [[se casser]], [[se briser]]
 * Georgian: [[ტყდომა]] (tq‘doma), [[მტვრევა]] (mtvreva)
 * German: [[zerbrechen]], [[kaputtgehen]]
+*: [[Old High German]]: {{tø|goh|brehhan}}
 * Greek: {{t+|el|σπάω|tr='spao}}
 * Hebrew: {{t-|he|נשבר|tr=nishbár}}
 * {{trreq|Hindi}}
@@ -193,6 +194,7 @@ The sense relating to a spell of weather is most likely to be used after a perio
 * Mongolian: {{t|mn|хагарах|tr=hagarah|sc=Cyrl|xs=Mongolian}}
 * [[Old Dutch]]: {{tø|odt|brecan}}
 * [[Old English]]: {{t|ang|brecan}}
+* [[Old Saxon]]: {{tø|osx|brekan}}
 * Persian: {{t|fa|خرد کردن|tr=xord kardan|xs=Persian}}, {{t+|fa|شکستن|tr=šekastan|xs=Persian}}
 * Polish: [[złamać się]] (two pieces), [[rozbić się]], [[połamać się]] (more pieces)
 * Portuguese: [[quebrar]], [[partir]], [[romper]] (if flexible material)
