--- a/en/o/octillion.34109.wikitext
+++ b/en/o/octillion.34109.wikitext
@@ -26,6 +26,7 @@ From the prefix ''[[oct-]]'' (''eight'') + ''[[-illion]]'' (from [[million]]); [
 * Finnish: [[kvadriljardi]]
 * German: {{t+|de|Quadrilliarde}}
 {{trans-mid}}
+* Japanese: {{t|ja|千秭|tr=せんし, senshi|sc=Jpan}}
 * Russian: [[окталлион]]
 * Ukrainian: [[октильйон]]
 {{trans-bottom}}
