--- a/en/q/qua.4315.wikitext
+++ b/en/q/qua.4315.wikitext
@@ -141,7 +141,9 @@ The suffix has been used since around the 17th and 18th century. It is most like
 
 ==Vietnamese==
 
-===Preposition===
+===Etymology===
+From {{etyl|zh|vi}} [[過]]
+====Preposition====
 {{infl|vi|preposition}}
 
 # [[through]], [[across]], [[by]]
