--- a/en/q/qua.4315.wikitext
+++ b/en/q/qua.4315.wikitext
@@ -143,7 +143,7 @@ The suffix has been used since around the 17th and 18th century. It is most like
 
 ===Etymology 1===
 Sino-Vietnamese; Vietnamese reading of Han character [[過]]
-====Preposition====
+===Preposition===
 {{infl|vi|preposition}}
 
 # [[through]], [[across]], [[by]]
