--- a/en/b/bid.6797.wikitext
+++ b/en/b/bid.6797.wikitext
@@ -105,7 +105,7 @@ From {{etyl|ang}} verb ''[[beodan|bēodan]]'' ‘offer, announce’. Conflation 
 {{en-noun}}
 
 # An [[offer]] at an [[auction]].
-# ''His '''bid''' was $35,000.''
+#: ''His '''bid''' was $35,000.''
 # {{context|[[ultimate frisbee]]}} A (failed) attempt to [[receive]] or [[intercept]] a [[pass]].
 #: ''Nice '''bid'''!''
 # {{rfv-sense}} The announcement of a goal.
