--- a/en/a/Ancestor Night.741683.wikitext
+++ b/en/a/Ancestor Night.741683.wikitext
@@ -8,13 +8,11 @@
 {{en-noun|sg=[[ancestor|Ancestors]] [[Night]]}}
 
 # {{context|paganism}} A modern pagan festival, especially celebrated by followers of [[Heathenry]] in late October or early November based on the English folk customs and ancestor worship.
-
-====Quotations====
-* '''1991''', D J Conway, Norse Magic, Llewellyn Publications, page 51,
-*: ''This is '''Ancestor Night''', the Feast of the Dead, the night strongest for communication with those gone into the shadow lands, those who now dwell over Bifrost, the Rainbow Bridge to Asgard.''
-* '''1999''', Editorial, Thunder issue 12 (privately published journal), Thorshof, events news page (not numbered).
-*: ''We will then walk (or catch the bus) back to Thorshof for the '''ancestors night''' ceremony and party.''
-* '''1999''',Gail Duff,The Wheel of the Wiccan Year, page 23.
-*:''Other names are the Festival of Remembrance, the Feast of Apples, '''Ancestor Night''' or the Feast of the Dead.''
-*'''2003''', Wulf Hengestsson, The Tale of Aelfstan and the Aelfar Princess, (privately published), page 18. 
-*: '''''Ancestors Night''' marks the end of summer and the beginning of winter.''
+#* '''1991''', D J Conway, Norse Magic, Llewellyn Publications, page 51,
+#*: ''This is '''Ancestor Night''', the Feast of the Dead, the night strongest for communication with those gone into the shadow lands, those who now dwell over Bifrost, the Rainbow Bridge to Asgard.''
+#* '''1999''', Editorial, Thunder issue 12 (privately published journal), Thorshof, events news page (not numbered).
+#*: ''We will then walk (or catch the bus) back to Thorshof for the '''ancestors night''' ceremony and party.''
+#* '''1999''',Gail Duff,The Wheel of the Wiccan Year, page 23.
+#*:''Other names are the Festival of Remembrance, the Feast of Apples, '''Ancestor Night''' or the Feast of the Dead.''
+#*'''2003''', Wulf Hengestsson, The Tale of Aelfstan and the Aelfar Princess, (privately published), page 18. 
+#*: '''''Ancestors Night''' marks the end of summer and the beginning of winter.''
