--- a/en/s/self-existent.742373.wikitext
+++ b/en/s/self-existent.742373.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
 ===Pronunciation===
-* {{a|UK}} {{IPA|/ˌsɛlfɛgzˈɪstənt/}}
+* {{a|UK}} {{IPA|/ˌsɛlfɛɡzˈɪstənt/}}
 
 ===Adjective===
 {{en-adj}}
