--- a/en/w/whistle.7360.wikitext
+++ b/en/w/whistle.7360.wikitext
@@ -156,7 +156,7 @@
 * Polish: [[gwizdać]], [[świstać]]
 * Portuguese: {{t|pt|assoviar}}
 * Romanian: {{t+|ro|fluiera}},  {{t+|ro|şuiera}}
-* Russian: {{t+|ru|свистеть|tr=svist'ét’}} {{impf}}, {{t|ru|свистнуть|tr=svístnut’}} {{pf}}
+* Russian: {{t+|ru|свистеть|tr=svistét’}} {{impf}}, {{t|ru|свистнуть|tr=svístnut’}} {{pf}}
 * [[Scottish Gaelic]]: {{t-|gd|dèan fead|xs=Scottish Gaelic}},  {{t-|gd|fead|xs=Scottish Gaelic}}
 * Serbian: {{t|sr|zvižduk|m}}
 * Spanish: {{t+|es|silbar}},  {{t+|es|chiflar}},  {{t+|es|pitar}}
@@ -171,7 +171,7 @@
 * Finnish: {{t-|fi|viheltää}}
 * Hungarian: {{t+|hu|fütyül}}, {{t|hu|sivít}}
 {{trans-mid}}
-* Russian: {{t+|ru|свистеть|tr=svist'ét’}} {{impf}}, {{t|ru|просвистеть|tr=prosvist'ét’}} {{pf}}
+* Russian: {{t+|ru|свистеть|tr=svistét’}} {{impf}}, {{t|ru|просвистеть|tr=prosvistét’}} {{pf}}
 * Serbian: {{t|sr|zviždanje}}, {{t-|sr|zviždati}}
 * Swahili: {{t+|sw|kipenga|xs=Swahili}}
 * Swedish: {{t+|sv|vissla}}
