--- a/en/w/whistle.7360.wikitext
+++ b/en/w/whistle.7360.wikitext
@@ -63,8 +63,9 @@
 {{trans-top|act of whistling}}
 * Chinese:
 *: Mandarin: {{t|zh|口哨|tr=kǒushào|sc=Hani}}, {{t|zh|口笛|tr=kǒudí|sc=Hani}}
-* Hebrew: {{t-|he|שריקה|f|tr=sh'riká}}
+* German: {{t|de|Pfeifen|n}}
 {{trans-mid}}
+* Hebrew: {{t-|he|שריקה|f|tr=sh'riká}}
 * Japanese: {{t|ja|口笛|tr=くちぶえ, kuchibue|sc=Jpan}}
 * Russian: {{t|ru|свисток|m|tr=svistók|sc=Cyrl}}, {{t|ru|свист|m|tr=svist|sc=Cyrl}}
 {{trans-bottom}}
