--- a/en/c/consume.34056.wikitext
+++ b/en/c/consume.34056.wikitext
@@ -41,6 +41,7 @@ From {{etyl|la}} ''[[consumere]]''.
 * Dutch: {{t+|nl|consumeren}}, {{t-|nl|verbruiken}}
 * Finnish: {{t-|fi|kuluttaa}}
 * French: {{t+|fr|consommer}}
+* German: {{t|de|verbrauchen}}
 * Hebrew: [[לצרוך]] (litzrokh)
 {{trans-mid}}
 * Hungarian: {{t+|hu|fogyaszt}}
