--- a/en/-/-um.34068.wikitext
+++ b/en/-/-um.34068.wikitext
@@ -31,6 +31,11 @@ From the [[homographic]] [[w:Grammatical case|case]] endings of the [[nominative
 
 ====Derived terms====
 {{rel-top4|Terms which feature the ''-um'' suffix}}
+* [[addendum]]
+* [[agendum]]
+* [[aquarium]]
+* [[bacterium]]
+* [[colosseum]]
 * [[criterium]]
 * [[datum]]
 * [[decennium]]
