--- a/en/t/thing.7362.wikitext
+++ b/en/t/thing.7362.wikitext
@@ -7,9 +7,9 @@
 ===Etymology===
 From {{etyl|enm}}, from {{etyl|ang}} ''[[þing#Old English|þing]]''.
 
-From a Proto-Germanic word (German ''ding'', Scandinavian languages ''ting'').
+From a Proto-Germanic word (German {{term|Ding|lang=de}}, Danish and Norwegian {{term|ting}}).
 
-Originally meaning an assembly, that handled political and court issues. Later an issue at that assembly was called a "thing", leading to today's meaning "an object".
+Originally meaning an assembly, that handled political and court issues. Later an issue at that assembly was called a “thing”, leading to today's meaning “an object”.
 
 ===Pronunciation===
 * {{enPR|thĭng}}, {{IPA|/θɪŋ/}}, {{SAMPA|/TIN/}}
