--- a/en/t/trick out.774631.wikitext
+++ b/en/t/trick out.774631.wikitext
@@ -1,18 +1,18 @@
-{{wikipedia|dab=tricked out}}
 ==English==
+{{wikipedia|dab=tricked out}}
 
 ===Verb===
 {{en-verb|inf=[[trick]] [[out]]|tricks out|tricking out|tricked out}}
 
-# {{transitive|slang}} To [[mod]] or [[customize]] an object, typically for the purposes of [[personalization]] and enhancing [[performance]] capabilities such as the ability to perform [[stunt]]s.
+# {{informal|transitive|of persons and objects}} To [[dress]] or [[decorate]] in an especially [[fancy]], [[elaborate]], or [[excessive]] manner. 
+# {{informal|transitive|of a [[motor vehicle]], etc.}} To [[mod]] or [[customize]] an object, typically for the purposes of [[personalization]] and enhancing [[performance]] capabilities such as the ability to perform [[stunt]]s.
 #: ''His friends were particularly impressed with the way he '''tricked out''' his scooter.''
 
-====Derived terms====
-* [[tricked out]]  {{pos_a}}; heavily modified
-
 ====Synonyms====
-* [[customize]]
-* [[modify]]
-* [[mod]]
+* {{sense|dress or decorate in a fancy or elaborate manner}} [[adorn]], [[festoon]]
+* {{sense|mod or customize}} [[customize]], [[modify]], [[mod]]
+
+====Derived terms====
+* [[tricked out]]  {{pos_a}}
 
 [[Category:English phrasal verbs]]
