--- a/en/c/consumption.34058.wikitext
+++ b/en/c/consumption.34058.wikitext
@@ -57,6 +57,7 @@
 * Finnish: {{t|fi|riutuminen}}
 {{trans-mid}}
 * Russian: {{t|ru|истощение|n|tr=istoščénije}}
+* [[Scottish Gaelic]]: {{t|gd|caitheamh|f}}
 {{trans-bottom}}
 
 {{trans-see|pulmonary tuberculosis}}
