--- a/en/m/mill.4306.wikitext
+++ b/en/m/mill.4306.wikitext
@@ -185,6 +185,7 @@ From the noun ''mill''
 * Portuguese: {{t+|pt|moer}}
 * Romanian: {{t-|ro|măcina}}
 * Russian: {{t|ru|молоть|tr=molót'}} {{impf}}, {{t|ru|смолоть|tr=smolót'}} {{pf}}
+* [[Scottish Gaelic]]: {{t|gd|meil}}
 {{trans-bottom}}
 
 {{trans-top|shape, polish, etc, using a machine}}
