--- a/en/c/cop.26062.wikitext
+++ b/en/c/cop.26062.wikitext
@@ -45,8 +45,8 @@ Short for {{term|copper||police officer}}, itself from {{term|cop||one who cops}
 * Hebrew: {{t+|he|שוטר|m|tr=shotér}},  {{t|he|שוטרת|f|tr=shotéret}}
 * Hungarian: {{t-|hu|zsaru}}
 * Norwegian: {{t+|no|purk|m}}
-* Polish: {{t+|pl|gliniarz|m}}, {{t+|pl|glina|m}}
 {{trans-mid}}
+* Polish: {{t+|pl|gliniarz|m}}, {{t+|pl|glina|m}}
 * Russian: {{t|ru|коп|m|tr=kop}} {{qualifier|American}}, {{t+|ru|мент|m|tr=ment}} {{qualifier|offensive}}, {{t|ru|лягавый|m|tr=ljagávyj}} {{qualifier|offensive}}, {{t+|ru|мусор|m|tr=músor}} {{qualifier|more offensive}},   {{t+|ru|фараон|m|tr=faraón}} {{qualifier|slang, dated}}
 * Slovak: [[poliš]] {{m}}, [[hekáč]] {{m}}
 * Spanish: {{t-|es|tombo|m}}, {{t+|es|paco|m}}
@@ -80,6 +80,7 @@ Short for {{term|copper||police officer}}, itself from {{term|cop||one who cops}
 * [[POC#English|POC]]
 
 ====References====
+{{rfc-level|References at L4+ not in L3 POS section|lang=en}}
 * {{R:BBS}}
 
 ----
@@ -143,7 +144,7 @@ A shortened form of [[copain]].
 # [[braid]]
 
 ====Declension====
-*declension pattern {{sk-dub}}
+* declension pattern {{sk-dub}}
 
 [[ca:cop]]
 [[de:cop]]
