--- a/en/t/trick out.774631.wikitext
+++ b/en/t/trick out.774631.wikitext
@@ -3,7 +3,7 @@
 ===Verb===
 {{en-verb|inf=[[trick]] [[out]]|tricks out|tricking out|tricked out}}
 
-# {{informal|transitive|of a person and thing}} To [[dress]] or [[decorate]] in an especially [[fancy]], [[elaborate]], or [[excessive]] manner. 
+# {{informal|transitive|of a person or thing}} To [[dress]] or [[decorate]] in an especially [[fancy]], [[elaborate]], or [[excessive]] manner. 
 #* '''1869''', [[w:Mark Twain|Mark Twain]], ''The Innocents Abroad'', ch. 50:
 #*: We went down a flight of fifteen steps below the ground level, and stood in a small chapel '''tricked out''' with tapestry hangings, silver lamps, and oil paintings.
 # {{informal|transitive|of a [[motor vehicle]], etc.}} To [[mod]] or [[customize]] an object, typically for the purposes of [[personalization]] and enhancing [[performance]] capabilities such as the ability to perform [[stunt]]s.
