--- a/en/n/nooner.802769.wikitext
+++ b/en/n/nooner.802769.wikitext
@@ -15,6 +15,7 @@
 
 ===See also===
 *[[quickie]]
+*[[skyrocket]]
 
 ===References===
 *''Random House Webster's Unabridged Electronic Dictionary'', 1987-1996.
