--- a/en/m/muskrat.8239.wikitext
+++ b/en/m/muskrat.8239.wikitext
@@ -21,58 +21,56 @@
 
 ====Translations====
 {{trans-top|rodent}}
-* [[Basque]]: [[arratoi musketadun]]
-* Belarusian: [[андатра]] {{f}}
-* Bosnian: [[bizamski pacov]] {{m}}
-* [[Breton]]: [[razh-musk]]
-* Bulgarian: [[мускус]] ([[muskus]])
-* Cherokee: [[ᏎᎳᎩᏍᏆ]] (selagisqua)
-* Croatian: [[mošusni štakor|mošusni]] / [[bizamski štakor]]
-* Czech: [[ondatra]]
-* Danish: [[bisamrotte]]
+* [[Basque]]: {{t|eu|arratoi musketadun}}
+* Belarusian: {{t|be|андатра|f}}
+* Bosnian: {{t|bs|bizamski pacov|m}}
+* [[Breton]]: {{t|br|razh-musk}}
+* Bulgarian: {{t|bg|мускус|tr=muskus}}
+* Cherokee: {{t|hr|ᏎᎳᎩᏍᏆ|tr=selagisqua}}
+* Croatian: {{t|hr|mošusni štakor|mošusni}, {{t|hr|bizamski štakor}}
+* Czech: {{t|cs|ondatra}}
+* Danish: {{t|da|bisamrotte}}
 * Dutch: {{t+|nl|muskusrat|f}}
-* Esperanto: [[ondatro]]
-* Estonian: [[ondatra]]
-* Faroese: [[moskusrotta]]
+* Esperanto: {{t|eo|ondatro}}
+* Estonian: {{t|et|ondatra}}
+* Faroese: {{t|fo|moskusrotta}}
 * Finnish: {{t-|fi|piisami}}
 * French: {{t+|fr|rat musqué|m}}
-* [[Galician]]: [[aguaneira]]
+* [[Galician]]: {{t|gl|aguaneira}}
 * German: {{t+|de|Bisamratte|f}}
-* Greek: [[μοσχοπόντικας]]
-* Hungarian: [[pézsma]]
-* Icelandic: [[moskusrotta]], [[bísamrotta]]
-* Irish: [[muscfhrancach]]
-* Italian: [[topo muschiato]] {{m}}
+* Greek: {{t|el|μοσχοπόντικας}}
+* Hungarian: {{t|hu|pézsma}}
+* Icelandic: {{t|is|moskusrotta}}, {{t|is|bísamrotta}}
+* Irish: {{t|ga|muscfhrancach}}
+* Italian: {{t|it|topo muschiato|m}}
 * [[Kannada]]: {{t|kn|ಸುಂಡಿಲಿ}}
-* Korean: [[사향쥐]] (sahyangjwi)
-* Latin: [[Ondatra zibethicus]]
-* Latvian: [[ondatra]]
+* Korean: {{t|ko|사향쥐|tr=sahyangjwi}}
+* Latvian: {{t|lv|ondatra}}
 {{trans-mid}}
-* Lithuanian: [[ondatra]]
-* [[Lower Sorbian]]: [[bizamowy šćurk]]
-* [[Macedonian]]: {{t|mk|бизамски стаорец|m|tr=bízamski stáorec}}
-* Maltese: [[far tal-misk ta’ l-ilma]]
-* Norwegian: [[bisamrotte]]
+* Lithuanian: {{t|li|ondatra}}
+* [[Lower Sorbian]]: {{t|dsb|bizamowy šćurk}}
+* [[Macedonian]]}: {{t|mk|бизамски стаорец|m|tr=bízamski stáorec}}
+* Maltese: {{t|mi|far tal-misk ta’ l-ilma}}
+* Norwegian: {{t|no|bisamrotte}}
 * Polish: {{t+|pl|piżmak}}
-* Portuguese: [[rato almiscareiro]]
-* Romanian: [[bizam]]
-* [[Romansch]]: [[undatra]]
-* Russian: [[ондатра]] /ondátra/ {{f}}
-* [[Sami]]: [[bisámroahttu]]
-* [[Sardinian]]: [[medrona muscada]], [[topi muscau]]
-* Scottish: [[radan molach]]
+* Portuguese: {{t|pt|rato almiscareiro}}
+* Romanian: {{t|ro|bizam}}
+* [[Romansch]]: {{t|rm|undatra}}
+* Russian: {{t|ru|ондатраtr=ondátra|f}}
+* [[Sardinian]]: {{t|sc|medrona muscada}}, {{t|sc|topi muscau}}
+* Scots: {{t|sco|radan molach}}
 * Serbian:
-*: Cyrillic: [[бизамски пацов]]
-*: Latin: [[bizamski pacov]]
-* Slovak: [[ondatra pižmová]]
-* Slovene: [[pižmovka]] {{f}}
-* Spanish: [[rata almizclera]]
-* Swedish: [[bisam]] {{c}}
-* Turkish: [[misk sıçanı]]
-* Ukrainian: [[ондатра]] ([[ondatra]]) {{f}}
-* [[Upper Sorbian]]: [[pižmo]], [[pižmowa šćura]], [[bizamowa myš]]
-* Welsh: [[mwsglygoden]], [[llygoden fwsg]]
-* [[West Frisian]]: [[muskusrôt]]
+*: Cyrillic: {{t|sr|бизамски пацов|sc=Cyrl}}
+*: Roman: {{t|sr|bizamski pacov|sc=Latn}}
+* Slovak: {{t|sk|ondatra pižmová}}
+* Slovene: {{t|sl|pižmovka|f}}
+* Spanish: {{t|es|rata almizclera}}
+* Swedish: {{t|sv|bisam}} |c}}
+* Turkish: {{t|tr|misk sıçanı}}
+* Ukrainian: {{t|uk|ондатра|tr=ondatra|f}}
+* [[Upper Sorbian]] {{t|hsb|pižmo}}, {{t|hsb|pižmowa šćura}}, {{t|hsb|bizamowa myš}}
+* Welsh: [[mwsglygoden}}, {{t|cy|llygoden fwsg}}
+* [[West Frisian]]: {{t|fy|muskusrôt}}
 {{trans-bottom}}
 
 [[Category:Rodents]]
