--- a/en/m/muskrat.8239.wikitext
+++ b/en/m/muskrat.8239.wikitext
@@ -26,7 +26,7 @@
 * Bosnian: {{t|bs|bizamski pacov|m}}
 * [[Breton]]: {{t|br|razh-musk}}
 * Bulgarian: {{t|bg|мускус|tr=muskus}}
-* Cherokee: {{t|hr|ᏎᎳᎩᏍᏆ|tr=selagisqua}}
+* Cherokee: {{t|chr|ᏎᎳᎩᏍᏆ|tr=selagisqua}}
 * Croatian: {{t|hr|mošusni štakor|mošusni}}, {{t|hr|bizamski štakor}}
 * Czech: {{t|cs|ondatra}}
 * Danish: {{t|da|bisamrotte}}
@@ -49,7 +49,7 @@
 {{trans-mid}}
 * Lithuanian: {{t|li|ondatra}}
 * [[Lower Sorbian]]: {{t|dsb|bizamowy šćurk}}
-* [[Macedonian]]}: {{t|mk|бизамски стаорец|m|tr=bízamski stáorec}}
+* [[Macedonian]]: {{t|mk|бизамски стаорец|m|tr=bízamski stáorec}}
 * Maltese: {{t|mt|far tal-misk ta’ l-ilma}}
 * Norwegian: {{t|no|bisamrotte}}
 * Polish: {{t+|pl|piżmak}}
