--- a/en/w/wild boar.8245.wikitext
+++ b/en/w/wild boar.8245.wikitext
@@ -3,7 +3,7 @@
 [[Image:Zwijntje.JPG|thumb|A wild boar]]
 
 ===Pronunciation===
-* {{IPA|/'waɪldˈbɔʊɽ/}}
+* {{IPA|/ˈwaɪldˈbɔʊɽ/}}
 * {{audio|en-uk-wild boar.ogg|Audio (UK)}}
 
 ===Noun===
@@ -42,8 +42,8 @@
 * Japanese: [[イノシシ]] ([[猪]], ''inoshishi'')
 * [[Javanese]]: {{t-|jv|celeng|xs=Javanese}}
 * Korean: [[멧돼지]] ''met-dwaeji''
-{{trans-mid}}
 * [[Ladin]]: [[porcel salvare]]
+{{trans-mid}}
 * Latin: [[Sus scrofa]] (ferus)
 * Latvian: [[mežacūka]]
 * Lithuanian: {{t+|lt|šernas|xs=Lithuanian}}
