--- a/en/m/marten.8230.wikitext
+++ b/en/m/marten.8230.wikitext
@@ -11,7 +11,7 @@
 * {{homophones|martin|Martin}} {{qualifier|in some accents}}
 
 ===Etymology===
-{{etyl|enm}} ''martryn'', from {{etyl|xno}} ''martrine'' 'marten fur', from Old Low Franconian *''marþrin'' 'pertaining to the marten' (cf. Old Saxon ''marthrin''), from *''marþr'' (compare Dutch ''marter''), from {{proto|Germanic|marþuz}} 'wedding; marten' (compare German ''[[Marder]]'', Old English ''mearþ'' 'shrew', Crimean Gothic ''marzus'' 'wedding'), from {{proto|Indo-European}} *''martus'' 'bride'. For the semantic development, compare Italian ''donnola'' 'weasel', from ''donna'' 'lady', Greek ''nyfítsa'' 'weasel', from ''nymfē'' 'bride'. More at [[marry]].
+From {{etyl|enm}}, of {{etyl|gmw-lge}} origin, from {{etyl|gml}} {{term|marten||marten|lang=gml}}, diminutive of {{term|mart|lang=gml}}, {{term|marte||marten|lang=gml}}, from {{etyl|osx}} *{{term||marþa|marten|lang=osx}}, from {{proto|Germanic|marþuz|marten|lang=en}}. Influenced by Late {{etyl|enm}} {{term|martren||skin or fur of the marten|lang=enm}}, from {{etyl|xno}} {{term|martrine||marten fur|lang=xno}}, from {{term|martre||marten|lang=xno}}, of {{etyl|gem}} origin, from {{etyl|frk}} *{{term||martar|marten|lang=frk}}, from {{proto|Germanic|marþraz||marþuz|marten|lang=en}}. Cognate with {{etyl|goh|-}} {{term|mardar||marten|lang=goh}} ({{etyl|de|-}} {{term|Marder|lang=de}}), {{etyl|nl|-}} {{term|marter||marten|lang=nl}}, {{etyl|ang|-}} {{term|mearþ||marten|lang=ang}}, {{etyl|non|-}} {{term|mǫrðr||marten|lang=non|sc=Latinx}}, {{etyl|osx|-}} {{term|marþrin||of a marten, made of marten fur|lang=osx}}, {{etyl|ang|-}} {{term|mierþern||made of marten fur|lang=ang}}. Possibly related to {{etyl|got|-}} {{term|||tr=marzus|wedding|lang=got}}, from {{proto|Germanic|marþiō|wedding|lang=en}}, from {{proto|Indo-European|mArtus||mArti-|bride|lang=en}}. More at {{l|en|marry}}.
 
 ===Noun===
 {{en-noun}}
