--- a/en/m/marten.8230.wikitext
+++ b/en/m/marten.8230.wikitext
@@ -12,7 +12,7 @@
 
 ===Etymology===
 {{rfscript|Gothic}}
-From {{etyl|enm}}, of {{etyl|gmw-lge}} origin, from {{etyl|gml}} {{term|marten||marten|lang=gml}}, diminutive of {{term|mart|lang=gml}}, {{term|marte||marten|lang=gml}}, from {{etyl|osx}} *{{term||marþa|marten|lang=osx}}, from {{proto|Germanic|marþuz|marten|lang=en}}. Influenced by Late {{etyl|enm}} {{term|martren||skin or fur of the marten|lang=enm}}, from {{etyl|xno}} {{term|martrine||marten fur|lang=xno}}, from {{term|martre||marten|lang=xno}}, of {{etyl|gem}} origin, from {{etyl|frk}} *{{term||martar|marten|lang=frk}}, from {{proto|Germanic|marþraz||marþuz|marten|lang=en}}. Cognate with {{etyl|goh|-}} {{term|mardar||marten|lang=goh}} ({{etyl|de|-}} {{term|Marder|lang=de}}), {{etyl|nl|-}} {{term|marter||marten|lang=nl}}, {{etyl|ang|-}} {{term|mearþ||marten|lang=ang}}, {{etyl|non|-}} {{term|mǫrðr||marten|lang=non|sc=Latinx}}, {{etyl|osx|-}} {{term|marþrin||of a marten, made of marten fur|lang=osx}}, {{etyl|ang|-}} {{term|mierþern||made of marten fur|lang=ang}}. Perhaps related to {{etyl|got|-}} {{term|||tr=marzus|wedding|lang=got}}, from {{proto|Germanic|marþus|wedding|marþiō|bride|lang=en}}, from {{proto|Indo-European|mArtus|wedding|mArti-|bride|lang=en}}. More at {{l|en|marry}}.
+From {{etyl|enm}}, from {{etyl|gml}} {{term|marten||marten|lang=gml}}, diminutive of {{term|mart|lang=gml}}, {{term|marte||marten|lang=gml}}, from {{etyl|osx}} *{{term||marþa|marten|lang=osx}}, from {{proto|Germanic|marþuz||marþraz|marten|lang=en}}. Influenced by {{etyl|enm}} {{term|martren||skin or fur of the marten|lang=enm}}, from {{etyl|xno}} {{term|martrine||marten fur|lang=xno}}, from {{term|martre||marten|lang=xno}}, from {{etyl|frk}} *{{term||martar|marten|lang=frk}}, from the same {{etyl|gem}} source. Cognate with {{etyl|goh|-}} {{term|mardar||marten|lang=goh}} ({{etyl|de|-}} {{term|Marder|lang=de}}), {{etyl|ang|-}} {{term|mearþ||marten|lang=ang}}, {{etyl|non|-}} {{term|mǫrðr||marten|lang=non|sc=Latinx}}. Compare also {{etyl|osx|-}} {{term|marþrin||of a marten, made of marten fur|lang=osx}}, {{etyl|ang|-}} {{term|mierþern||made of marten fur|lang=ang}}. Proto-Germanic form of uncertain origin. Perhaps related to {{etyl|got|-}} {{term|||tr=marzus|wedding|lang=got}}, from {{proto|Germanic|marþus|wedding|lang=en}}, from {{proto|Indo-European|mArtus|wedding|lang=en}}. More at {{l|en|marry}}.
 
 ===Noun===
 {{en-noun}}
