--- a/en/t/then.7353.wikitext
+++ b/en/t/then.7353.wikitext
@@ -10,7 +10,7 @@
 *: {{rhymes|ɛn}}
 
 ===Etymology===
-{{etyl|ang|en}} {{term|þonne|lang=ang}}. Cognate with German [[dann]].
+From {{etyl|enm}} {{term|then|then(ne)|lang=enm}}, {{term|than|than(ne)|lang=enm}}, from {{etyl|ang|en}} {{term|þonne|lang=ang}}, {{term|þanne|lang=ang}}, {{term|þænne||then, at that time|lang=ang}}, from {{proto|Germanic|þan-||þana-|at that (time), then|lang=en}}, from {{proto|Germanic|þa-|demonstrative pronoun|lang=en}}, from {{proto|Indo-European|to-|demonstrative pronoun|lang=en}}. Cognate with {{etyl|nl|-}} {{term|dan||then|lang=nl}}, {{etyl|de|-}} {{term|dann||then|lang=de}}, {{etyl|is|-}} {{term|þá||then|lang=is}}. Related to {{l|en|than}}.
 
 ===Adverb===
 {{en-adv|-}}
