--- a/en/w/West Frisian.741118.wikitext
+++ b/en/w/West Frisian.741118.wikitext
@@ -25,6 +25,7 @@ Some linguists consider West Frisian, Saterland Frisian, and North Frisian to be
 * [[Limburgish]]: {{t|li|Wèsfriesj|n|xs=Limburgish}}
 * Polish: {{t|pl|zachodnio-fryzyjski|m}}
 * Portuguese: {{t+|pt|frísio|m}},  {{t|pt|frisão|m}}
+* Spanish: {{t|es|Frisia Occidental}}
 * West Frisian: {{t+|fy|Frysk|xs=West Frisian}}
 {{trans-bottom}}
 
