--- a/en/s/staff.34070.wikitext
+++ b/en/s/staff.34070.wikitext
@@ -124,6 +124,7 @@
 
 [[Category:English nouns with irregular plurals]]
 [[Category:English words with multiple plurals]]
+[[Category:Politically correct terms]]
 
 ----
 
