--- a/en/b/Bosphorus.776975.wikitext
+++ b/en/b/Bosphorus.776975.wikitext
@@ -16,22 +16,32 @@
 
 ====Translations====
 {{trans-top|A strait that passes through Istanbul}}
+* [[West Frisian]]: {{t|fy|Bosporus}}
+* [[Afrikaans]]: {{t|af|Bosporus}}, {{t|af|Istanboel-straat}}, {{tø|cep|Bosporo}}
 * Arabic: {{Arab|[[مضيق بوسفور]]}} {{IPAchar|(maɖīq búsfor)}} {{m}}
+*: [[Egyptian Arabic]]: {{tø|arz|البوسفور|sc=Arab}}
+* [[Aragonese]]: {{t|an|Bosforo}}
 * Armenian: {{t-|hy|Բոսֆոր|tr=Bosfor}}
-* [[Asturian]]: [[Bósforo]] {{m}}
+* [[Asturian]]: [[Bósforo]] {{m}}, {{t|ast|Bósforo}}
 * [[Azerbaijani]]: [[Bosfor Boğazı]]
+* [[Bashkir]]: {{tø|ba|Босфор|tr=Bosfór|sc=Cyrl}}
+* [[Basque]]: {{t|eu|Bosforo itsasartea}}
 * Bosnian: [[Bosfor]] {{m}}
 * [[Breton]]: [[Bosfor]]
 * Bulgarian: [[Босфор]] {{m}}
 * [[Catalan]]: [[Bòsfor]] {{m}}
 * Chinese: [[博斯普鲁斯海峡]] (Bósīpǔlǔsī hǎixiá)
+* [[Chuvash]]: {{tø|cv|Босфор|sc=Cyrl}}
 * Croatian: {{t-|hr|Bospor|m}}
 * Czech: {{t-|cs|Bospor|m}}
 * Esperanto: {{t-|eo|Bosporo|xs=Esperanto}}
+* Estonian: {{t|et|Bosporus}}
+* [[Extremaduran]]: {{tø|ext|Bósforu}}
 * Finnish: {{t+|fi|Bosporinsalmi}}
 * French: {{t+|fr|Bosphore|m}}
 * [[Galician]]: [[Bósforo]] {{m}}
 * Georgian: [[ბოსფორი]] (bosp‘ori)
+* German: {{t|de|Bosporus|m}}
 * Greek: {{t-|el|Βόσπορος|m|tr=Vósporos}}
 * Hebrew: {{t-|he|בוספורוס|m|alt=בּוֹסְפּוֹרוּס|tr=bosporus}}
 * Hindi: {{t-|hi|बोस्पोरुस जलसन्धि|xs=Hindi}}
@@ -41,11 +51,17 @@
 {{trans-mid}}
 * Italian: {{t-|it|Bosforo|m}}
 * Japanese: [[ボスポラス海峡]] (ボスポラスかいきょう, bosuporasu kaikyō)
+* [[Javanese]]: {{t|jv|Selat Bosporus}}
+* [[Karakalpak]]: {{tø|kaa|Bosfor}}
 * Korean: [[보스포루스 해협]] (boseuporuseu haehyeop)
-* Kurdish: [[Tengava Stenbol]]
-* Lithuanian: [[Bosforo sąsiauris]]
+* Kurdish: [[Tengava Stenbol]], {{t|ku|Tengava Stenbolê|sc=ku-Arab}}, {{t|ku|Bosfor|sc=ku-Arab}}
+* Latin: {{t|la|Bosporus}}
+* Latvian: {{t|lv|Bosfors}}
+* Lithuanian: [[Bosforo sąsiauris]], {{t|lt|Bosforas}}
+* [[Luxembourgish]]: {{t|lb|Bosporus}}
 * [[Macedonian]]: {{t|mk|Босфор|m|tr=Bósfor}}
 * [[Occitan]]: [[Bosfòr]] {{m}}
+* [[Old English]]: {{t|ang|Bosporos}}
 * Persian: {{fa-Arab|[[تنگه بسفر]]}} (tanga bosfor)
 * Polish: {{t+|pl|Bosfor|m}}
 * Portuguese: [[Bósforo]] {{m}}
@@ -55,11 +71,13 @@
 * Slovene: {{t+|sl|Bospor|m}}
 * Spanish: [[Bósforo]] {{m}}
 * Swedish: [[Bosporen]]
+* Thai: {{t|th|ช่องแคบบอสฟอรัส|sc=Thai}}
 * Turkish: {{t+|tr|İstanbul Boğazı}}
 * Ukrainian: [[Босфор]] {{m}}
 * Urdu: {{ur-Arab|[[آبنائے باسفورس]]}}
 * Vietnamese: [[Eo biển Bosporus]]
-* Welsh: {{t-|cy|Bosphorus|xs=Welsh}}
+* Welsh: {{t-|cy|Bosphorus|xs=Welsh}}, {{t|cy|Bosphorus}}
+* {{subst:be-x-old}}: {{tø|be-x-old|Басфор|tr=Basfór|sc=Cyrl}}
 {{trans-bottom}}
 
 ====See also====
