--- a/en/b/Bosphorus.776975.wikitext
+++ b/en/b/Bosphorus.776975.wikitext
@@ -34,6 +34,7 @@
 * [[Chuvash]]: {{tø|cv|Босфор|sc=Cyrl}}
 * Croatian: {{t-|hr|Bospor|m}}
 * Czech: {{t-|cs|Bospor|m}}
+* Dutch: {{t|nl|Bosporus}}
 * Esperanto: {{t-|eo|Bosporo|xs=Esperanto}}
 * Estonian: {{t|et|Bosporus}}
 * [[Extremaduran]]: {{tø|ext|Bósforu}}
@@ -58,8 +59,10 @@
 * Latin: {{t|la|Bosporus}}
 * Latvian: {{t|lv|Bosfors}}
 * Lithuanian: [[Bosforo sąsiauris]], {{t|lt|Bosforas}}
+* [[Low Saxon]]: {{t|nds|Bosporus}}
 * [[Luxembourgish]]: {{t|lb|Bosporus}}
 * [[Macedonian]]: {{t|mk|Босфор|m|tr=Bósfor}}
+* Norwegian: {{t|no|Bosporos}}
 * [[Occitan]]: [[Bosfòr]] {{m}}
 * [[Old English]]: {{t|ang|Bosporos}}
 * Persian: {{fa-Arab|[[تنگه بسفر]]}} (tanga bosfor)
@@ -68,15 +71,21 @@
 * Romanian: [[Bosfor]]
 * Russian: [[Босфор]] {{m}}
 * Serbian: [[Босфор]] ([[Bosfor]]) {{m}}
+* Serbo-Croatian: {{t|sh|Bosfor}}, {{t|sh|Босфор}}
+* [[Sicilian]]: {{t|scn|Bosfuru}}
 * Slovene: {{t+|sl|Bospor|m}}
 * Spanish: [[Bósforo]] {{m}}
+* Swahili: {{t|sw|Bosporus}}
 * Swedish: [[Bosporen]]
+* [[Tatar]]: {{t|tt|Босфор бугазы|tr=Bosfor bugazy|sc=Cyrl}}, {{t|tt|Истанбул бугазы|tr=Istanbul bugazy|sc=Cyrl}}
 * Thai: {{t|th|ช่องแคบบอสฟอรัส|sc=Thai}}
 * Turkish: {{t+|tr|İstanbul Boğazı}}
 * Ukrainian: [[Босфор]] {{m}}
 * Urdu: {{ur-Arab|[[آبنائے باسفورس]]}}
+* [[Uyghur]]: {{t|ug|ئىستانبۇل بوغازى|sc=ug-Arab}}
 * Vietnamese: [[Eo biển Bosporus]]
 * Welsh: {{t-|cy|Bosphorus|xs=Welsh}}
+* [[Western Panjabi]]: {{tø|pnb|باسفورس}}
 {{trans-bottom}}
 
 ====See also====
