--- a/en/p/prisoner of war.4326.wikitext
+++ b/en/p/prisoner of war.4326.wikitext
@@ -10,24 +10,24 @@
 ====Translations====
 {{trans-top|soldier or combatant captured by the enemy}}
 * Arabic: {{t|ar|أسير الحرب|m|tr='asiir al-Harb|sc=Arab}}, {{t|ar|أسير|m|tr='asiir|sc=Arab}}
-* Chinese: [[战俘]], [[戰俘]] (zhàn fú)
+* Chinese:
 *: Mandarin: {{t|zh|戰俘|sc=Hani}}, {{t|zh|战俘|tr=zhànfú|sc=Hani}}, {{t|zh|俘虜|sc=Hani}}, {{t|zh|俘虏|tr=fúlǔ|sc=Hani}}
 * Czech: {{t-|cs|zajatec|m}}, {{t-|cs|válečný zajatec|m}}
 * Dutch: [[krijgsgevangene]]
 * Finnish: {{t+|fi|sotavanki}}
 * French: {{t-|fr|prisonnier de guerre|m}}
-* German: {{t-|de|Kriegsgefangene|m}}, {{t|de|Kriegsgefangener|m}}, {{t|de|Kriegsgefangene|f}}
+* German: {{t|de|Kriegsgefangener|m}}, {{t|de|Kriegsgefangene|f}}
 * Greek: {{t-|el|αιχμάλωτος πολέμου|tr=ekhmálotos polému}}
 * Icelandic: {{t-|is|stríðsfangi|m}}
 * [[Interlingua]]: [[prisionero de guerra]]
 * Italian: [[prigioniero di guerra]] {{m}}
-* Japanese: [[捕虜]] (horyo), {{t|ja|捕虜|tr=ほりょ, horyo|sc=Jpan}}
+* Japanese: {{t|ja|捕虜|tr=ほりょ, horyo|sc=Jpan}}
 {{trans-mid}}
-* Korean: [[전쟁 포로]] (jeonjaeng poro), {{t|ko|전쟁 포로|tr=jeonjaeng poro|sc=Kore}}
+* Korean: {{t|ko|전쟁 포로|tr=jeonjaeng poro|sc=Kore}}
 * Latin: [[dediticius]] {{m}}
 * Navajo: {{tø|nv|yiisnááh}}
 * Norwegian: {{t|no|krigsfange|m}}
-* Persian: {{fa-Arab|[[اسیر]]}} (asir), {{fa-Arab|[[بندی]]}} (bandi), {{t|fa|اسیر|tr=asir|sc=fa-Arab}}, {{t|fa|بندی|tr=bandi|sc=fa-Arab}}
+* Persian: {{t|fa|اسیر|tr=asir|sc=fa-Arab}}, {{t|fa|بندی|tr=bandi|sc=fa-Arab}}
 * Portuguese: [[prisioneiro de guerra]] {{m}}
 * Russian: {{t+|ru|военнопленный|m|tr=vojennoplénnyj}}, {{t|ru|пленный|m|tr=plénnyj|sc=Cyrl}}
 * [[Scottish Gaelic]]: {{t-|gd|prìosanach-chogaidh|m|xs=Scottish Gaelic}}
@@ -35,7 +35,7 @@
 * Spanish: [[prisionero de guerra]] {{m}}
 * Swedish: {{t|sv|krigsfånge}}
 * [[Telugu]]: [[యుద్ధ ఖైదీ]] (yuddha khaidee)
-* Ukrainian: {{t+|uk|бранець|m|tr=bránets'|xs=Ukrainian}}
+* Ukrainian: {{t+|uk|бранець|m|tr=bránec'|xs=Ukrainian}}
 * [[Volapük]]: [[kligafanäböpäb]]
 {{trans-bottom}}
 
