--- a/en/i/insipidness.855031.wikitext
+++ b/en/i/insipidness.855031.wikitext
@@ -15,7 +15,7 @@
 #*: His void spaces are a criticism of the '''insipidness''' of the overly materialistic modern way of life.
 
 ====Synonyms====
-* [[insipidity]], [[tastelessness]], [[vapidity]] 
+* [[insipidity]], [[tastelessness]], [[vapidity]], [[humdrum]], [[workaday]], [[bland]], [[cold]].
 
 ====Translations====
 {{trans-top|lack of distinctive, appealing, or energetic character}}
