--- a/en/p/pledge.7357.wikitext
+++ b/en/p/pledge.7357.wikitext
@@ -110,6 +110,7 @@ From {{etyl|enm}} ''[[plege#Middle English|plege]]'' from {{etyl|xno}} ''[[plege
 * Italian: {{t+|it|avallo|m}}, {{t+|it|garanzia|f}}
 {{trans-mid}}
 * Polish: {{t|pl|depozyt|m}}, {{t|pl|kaucja|f}}, {{t|pl|zastaw|m}}
+* Portuguese: {{t|pt|garantia}}
 * Russian: {{t+|ru|залог|m|tr=zalóg}}
 * [[Telugu]]: [[తనఖా]] (tanakhaa)
 {{trans-bottom}}
