--- a/en/月/月.4427.wikitext
+++ b/en/月/月.4427.wikitext
@@ -24,6 +24,7 @@ As part of a compound, should not be confused with [[⺼]], form of {{term|肉||
 
 ====See also====
 * [[青]] <!-- In modern form, but not etymologically -->
+* [[⺼]] [[冃]] {{qualifier|graphically similar}}
 
 ====References====
 * {{Han ref|kx=0504.190|dkj=14330|dj=0879.200|hdz=32041.010|uh=6708|ud=26376|bh=A4EB|bd=42219}}
