--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -116,7 +116,7 @@
 * Portuguese: {{t+|pt|porco|m}}
 * [[Romani]]: [[balo]] {{m}}, [[bali]] {{f}}
 * Romanian: {{t+|ro|porc|m}}
-* [[Romansch]]: [[portg]]
+* [[Romansch]]: [[portg]], {{t|rm|portg|m}}, {{t|rm|piertg|m}}, {{t|rm|püerch|m}}
 * Russian: {{t+|ru|свинья|f|tr=svin’já}}
 * [[Sami]]: [[spiidni]]
 * [[Samoan]]: {{t|sm|pua'a|xs=Samoan}}
