--- a/en/i/interruptor.803301.wikitext
+++ b/en/i/interruptor.803301.wikitext
@@ -1,3 +1,13 @@
+==Catalan==
+===Noun===
+{{ca-noun|m}}
+
+# [[switch]]
+
+====Related terms====
+* {{l|ca|interrompre}}
+
+----
 ==Portuguese==
 {{wikipedia|lang=pt}}
 
