--- a/en/s/seize.26061.wikitext
+++ b/en/s/seize.26061.wikitext
@@ -120,6 +120,7 @@ From {{etyl|la|fr}} {{term|sedecim|sēdecim|lang=la}}.
 [[is:seize]]
 [[it:seize]]
 [[kn:seize]]
+[[ku:seize]]
 [[lo:seize]]
 [[lt:seize]]
 [[hu:seize]]
