--- a/en/s/synchrocyclotron.742248.wikitext
+++ b/en/s/synchrocyclotron.742248.wikitext
@@ -14,4 +14,5 @@ From ''[[synchro-]]'' + ''[[cyclotron]]''.
 
 [[fr:synchrocyclotron]]
 [[pl:synchrocyclotron]]
+[[ta:synchrocyclotron]]
 [[vi:synchrocyclotron]]
