--- a/en/p/pledge.7357.wikitext
+++ b/en/p/pledge.7357.wikitext
@@ -137,6 +137,7 @@ From {{etyl|enm}} ''[[plege#Middle English|plege]]'' from {{etyl|xno}} ''[[plege
 [[el:pledge]]
 [[es:pledge]]
 [[fr:pledge]]
+[[gl:pledge]]
 [[io:pledge]]
 [[it:pledge]]
 [[kn:pledge]]
