--- a/en/r/rabbit.8241.wikitext
+++ b/en/r/rabbit.8241.wikitext
@@ -79,7 +79,7 @@
 *: Ancient: {{tø|grc|κούνικλος|m|tr=kouniklos|sc=polytonic}}
 *: Modern: {{t+|el|κουνέλι|n|tr=kounéli}}, {{i|obsolete}} {{t|el|κόνικλος|m|tr=kóniklos}}
 * [[Gujarati]]: [[સસલું]] (saslu.n)
-* Hebrew: [[ארנב]] (arnav) {{m}}
+* Hebrew: {{t|he|ארנב|m|tr=arnáv}}
 * Hindi: [[ख़रगोश]] (<u>kh</u>argoš) {{m}}, [[ख़रगोशनी]] (<u>kh</u>argošanī) {{f}}
 * Hungarian: {{t+|hu|nyúl}}
 * Icelandic: {{t+|is|kanína}}
