--- a/en/d/dud.26266.wikitext
+++ b/en/d/dud.26266.wikitext
@@ -65,6 +65,7 @@ From {{etyl|ota|sh}} {{term|طوت|tr=tut, dut|sc=ota-Arab|lang=ota}}, from {{et
 [[fr:dud]]
 [[it:dud]]
 [[hu:dud]]
+[[nl:dud]]
 [[pl:dud]]
 [[ro:dud]]
 [[ru:dud]]
