--- a/en/o/optionality.855642.wikitext
+++ b/en/o/optionality.855642.wikitext
@@ -6,7 +6,7 @@
 ===Noun===
 {{en-noun|optionalities}}
 
-# The potential for making additional choices which are available only after an initial choice.
+# The potential for making Jon and Giles an item.
 # {{finance|business}} The value of additional optional investment opportunities available only after having made an initial investment.
 #:''The short-term payoff for this is modest, but the '''optionality''' value is enormous.''
 # Quality or state in which choice or discretion is allowed.
