--- a/en/p/pajamas.4756.wikitext
+++ b/en/p/pajamas.4756.wikitext
@@ -34,6 +34,7 @@ From the {{etyl|fa}} {{fa-Arab|[[پايجامه]]}} {{IPA|/pɑjʤɑme}}/ meaning
 [[et:pajamas]]
 [[fa:pajamas]]
 [[io:pajamas]]
+[[my:pajamas]]
 [[pl:pajamas]]
 [[ta:pajamas]]
 [[vi:pajamas]]
