--- a/en/r/rabbit.8241.wikitext
+++ b/en/r/rabbit.8241.wikitext
@@ -12,7 +12,7 @@
 * Homophones: [[rabbet]]
 
 ===Etymology 1===
-From {{etyl|enm}} {{term|rabet|lang=enm}}, from {{etyl|frm}} dialect (compare {{etyl|fr|-}} dialect {{term|rabbotte|lang=frm}}, {{term|rabouillet|lang=frm}} 'baby rabbit'), from {{etyl|wa}} {{term|robète|lang=wa}}, diminutive of {{etyl|dum}} {{term|robbe||rabbit; seal|lang=dum}} (compare {{etyl|vls|-}} {{term|robbe||rabbit|lang=vls}}, {{etyl|nl|-}} {{term|rob|lang=nl}} 'seal'), from Middle Low German {{term|robbe|lang=gml}} 'seal' (cf. Low German dialect {{term||Rubb}}, {{term|Robb|lang=nds}}), from {{term|rubben|lang=gml}} 'to rub'. More at {{l|en|rub}}.
+From {{etyl|enm}} {{term|rabet|lang=enm}}, from {{etyl|frm}} dialect (compare {{etyl|fr|-}} dialect {{term|rabbotte|lang=frm}}, {{term|rabouillet||baby rabbit|lang=frm}}), from {{etyl|wa}} {{term|robète|lang=wa}}, diminutive of {{etyl|dum}} {{term|robbe||rabbit; seal|lang=dum}} (compare {{etyl|vls|-}} {{term|robbe||rabbit|lang=vls}}, {{etyl|nl|-}} {{term|rob||seal|lang=nl}}), from Middle Low German {{term|robbe||seal|lang=gml}} (compare Low German dialect {{term||Rubb}}, {{term|Robb|lang=nds}}), from {{term|rubben||ro rub|lang=gml}}. More at {{l|en|rub}}.
 
 ====Noun====
 {{en-noun}}
