--- a/en/b/break.6806.wikitext
+++ b/en/b/break.6806.wikitext
@@ -535,6 +535,16 @@ The sense relating to a spell of weather is most likely to be used after a perio
 ## {{tennis}} A [[game]] won by the [[receive|receiving]] [[player]](s).
 ## {{billiards|snooker|pool}} The first [[shot]] in a game of [[billiards]]
 ## {{snooker}} The number of points scored by one player in one visit to the table
+## {{soccer}} The [[counter-attack]]
+##*{{quote-news
+|year=2010
+|date=December 28
+|author=Owen Phillips
+|title=Sunderland 0 - 2 Blackpool
+|work=BBC
+|url=http://news.bbc.co.uk/sport1/hi/football/eng_prem/9317216.stm
+|page=
+|passage=Blackpool were not without their opportunities - thanks to their willingness to commit and leave men forward even when under severe pressure - and they looked very capable of scoring on the '''break'''. }}
 
 ====Usage notes====
 * {{sense|music}} The instruments that are named are the ones that carry on playing, for example a '''fiddle break''' implies that the fiddle is the most prominent instrument playing during the break.<!-- ! -->
