--- a/en/b/bleed.6801.wikitext
+++ b/en/b/bleed.6801.wikitext
@@ -131,7 +131,7 @@ From {{etyl|ang}} {{term|bledan|lang=ang}}
 [[Category:Bodily fluids]]
 [[Category:English ergative verbs]]
 [[Category:English irregular verbs]]
-
+[[Category:English copulative verbs]]
 [[ar:bleed]]
 [[cy:bleed]]
 [[de:bleed]]
